removed margin from component-example section to fix gap

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -52,7 +52,7 @@
 .component-example {
     background-color: rgba($color: white, $alpha: 0.98);
     padding: 12px 12px 24px 12px;
-    margin-top: -12px;
+    // margin-top: -12px;
 
 
     .inner-container {
